--- a/notebooks/merfish2model.ipynb
+++ b/notebooks/merfish2model.ipynb
@@ -2,25 +2,19 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "4388deba-03d4-4840-b4cf-7abc1a8cc406",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%load_ext autoreload\n",
-    "%autoreload 1\n",
-    "%aimport abc_mouse"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
-   "id": "79dc2cf7-4733-4d3b-96f7-44f59321df44",
+   "id": "bbcb6dee-b0de-4e1c-b2c8-e384a63ac15c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import abc_mouse\n",
+    "import sys\n",
     "import os\n",
+    "# Add the previous directory to path\n",
+    "module_path = os.path.abspath(os.path.join('..'))\n",
+    "if module_path not in sys.path:\n",
+    "    sys.path.append(module_path)\n",
+    "# Import abc_mouse\n",
+    "from atlas import abc_mouse\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
@@ -1356,7 +1350,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "96f5ad10-d687-4d65-b9e3-bcd76bda412d",
    "metadata": {},
    "outputs": [
@@ -1444,7 +1438,7 @@
        "VISp6b                     0.440343  1.831582   0.240417"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1465,6 +1459,14 @@
     "visp_ib[\"Vip/Pvalb\"] = visp_ib[\"Vip\"] / visp_ib[\"Pvalb\"]\n",
     "visp_ib"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a56968a7-4b43-48b7-b76a-02c5596985f9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
