fix local references in the notebook

--- a/resources/notebooks/merfish2model.ipynb
+++ b/resources/notebooks/merfish2model.ipynb
@@ -2,19 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "id": "bbcb6dee-b0de-4e1c-b2c8-e384a63ac15c",
    "metadata": {},
    "outputs": [],
    "source": [
     "import sys\n",
     "import os\n",
-    "# Add the previous directory to path\n",
-    "module_path = os.path.abspath(os.path.join('..'))\n",
-    "if module_path not in sys.path:\n",
-    "    sys.path.append(module_path)\n",
     "# Import abc_mouse\n",
-    "from atlas import abc_mouse\n",
+    "import airavata_cerebrum.atlas.data.abc_mouse as abc_mouse\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
@@ -146,8 +142,8 @@
    ],
    "source": [
     "# Downloading the necessary data\n",
-    "abc_mouse.ABC_BASE = \"/storage/home/hhive1/schockalingam6/data2/airavata-cerebrum/brain_atlases/abc_mouse\" # Change this to the directory to download\n",
-    "abc_mouse.download_abc_data()"
+    "ABC_ATLAS_BASE = \"/storage/home/hhive1/schockalingam6/data2/neuroscience/brain_atlases/abc_mouse_atlas/\" # Change this to the directory to download\n",
+    "#abc_mouse.download_abc_data()"
    ]
   },
   {
@@ -184,9 +180,9 @@
    "source": [
     "# Load Cell metadata, Gene metadata and Gene expression data\n",
     "manifest, file_meta = abc_mouse.merfish_files_meta()\n",
-    "cell_meta = abc_mouse.cell_metadata(file_meta)\n",
-    "gene_meta = abc_mouse.gene_metadata(file_meta)\n",
-    "exp_data = abc_mouse.gene_expression_matrix(manifest)"
+    "cell_meta = abc_mouse.cell_metadata(file_meta, ABC_ATLAS_BASE)\n",
+    "gene_meta = abc_mouse.gene_metadata(file_meta, ABC_ATLAS_BASE)\n",
+    "exp_data = abc_mouse.gene_expression_matrix(manifest, ABC_ATLAS_BASE)"
    ]
   },
   {
@@ -408,8 +404,8 @@
    ],
    "source": [
     "# Load taxonomy data and merge with cell data\n",
-    "merfish_view_dir = abc_mouse.view_dir(manifest, \"MERFISH-C57BL6J-638850\")\n",
-    "cluster_details, cluster_colors = abc_mouse.taxonomy_cluster(manifest)\n",
+    "merfish_view_dir = abc_mouse.view_dir(manifest, \"MERFISH-C57BL6J-638850\", ABC_ATLAS_BASE)\n",
+    "cluster_details, cluster_colors = abc_mouse.taxonomy_cluster(manifest, ABC_ATLAS_BASE)\n",
     "cell_meta_ext = cell_meta.join(cluster_details, on=\"cluster_alias\")\n",
     "cell_meta_ext = cell_meta_ext.join(cluster_colors, on=\"cluster_alias\")\n",
     "cell_meta_ext[[\"feature_matrix_label\", \"donor_label\",\"class\", \"x\",\"y\",\"z\"]]"
@@ -680,7 +676,7 @@
    ],
    "source": [
     "# Loading CCF Meta data\n",
-    "merfish_ccf_view_dir = abc_mouse.view_dir(manifest, \"MERFISH-C57BL6J-638850-CCF\")\n",
+    "merfish_ccf_view_dir = abc_mouse.view_dir(manifest, \"MERFISH-C57BL6J-638850-CCF\", ABC_ATLAS_BASE)\n",
     "cell_ccf = abc_mouse.cell_ccf_meta(os.path.join(merfish_ccf_view_dir, abc_mouse.PARCEL_META_DATA))\n",
     "cell_ccf[abc_mouse.CCF_COLS]"
    ]
@@ -703,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "f90e5765-579f-4072-95db-80fea6f69861",
    "metadata": {},
    "outputs": [],
@@ -738,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "51e5aa3f-3e92-444f-8f9b-7caeeb868fab",
    "metadata": {},
    "outputs": [
@@ -1168,7 +1164,7 @@
        "[61884 rows x 526 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1216,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "2fa84a57-c9d1-4f34-8ae1-bb6915920121",
    "metadata": {},
    "outputs": [
@@ -1312,7 +1308,7 @@
        "VISp6b                      1432    80   1512             0.052910"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1350,7 +1346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "id": "96f5ad10-d687-4d65-b9e3-bcd76bda412d",
    "metadata": {},
    "outputs": [
@@ -1438,7 +1434,7 @@
        "VISp6b                     0.440343  1.831582   0.240417"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1459,14 +1455,6 @@
     "visp_ib[\"Vip/Pvalb\"] = visp_ib[\"Vip\"] / visp_ib[\"Pvalb\"]\n",
     "visp_ib"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a56968a7-4b43-48b7-b76a-02c5596985f9",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -1485,7 +1473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.9.19"
   }
  },
  "nbformat": 4,
