update notebook for V1L4

--- a/tests/V1L4-Notebook.ipynb
+++ b/tests/V1L4-Notebook.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "id": "2e0db3b6-b61c-47a1-98e3-59d62b15d708",
    "metadata": {},
    "outputs": [],
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 41,
    "id": "0bf7073c-ede2-44ca-8195-7cb2cc7b053c",
    "metadata": {},
    "outputs": [],
@@ -41,14 +41,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
    "id": "e880260b-0462-4c95-99ba-cf5260e1d125",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1b517ac7ead540abbabe7a1c2e29bac9",
+       "model_id": "909674ec27e9455c85d7dea27e327a43",
        "version_major": 2,
        "version_minor": 0
       },
@@ -56,7 +56,7 @@
        "TwoByTwoLayout(children=(Tree(layout=Layout(grid_area='top-left', width='40%'), multiple_selection=False, node…"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,6 +82,7 @@
     "    if node_key in dsrc_views:\n",
     "        logging.getLogger(\"tree-update\").warning(\"Key in Panel \")\n",
     "        rview = dsrc_views[node_key]\n",
+    "        rview.update(new_val[0])\n",
     "        full_panel.bottom_right = rview.panel\n",
     "tree.observe(tree_update, names='selected_nodes')\n",
     "full_panel"
@@ -89,14 +90,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 36,
    "id": "60d3edbe-1602-4742-b308-05b669d4bb34",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "da97c65679d54394ae95dc373ef7ebf0",
+       "model_id": "a368ce46ec6345fc9917008cf6ff87e2",
        "version_major": 2,
        "version_minor": 0
       },
@@ -104,7 +105,7 @@
        "TwoByTwoLayout(children=(Tree(layout=Layout(grid_area='top-left', width='40%'), multiple_selection=False, node…"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -123,14 +124,61 @@
     "    new_val = change[\"new\"]\n",
     "    if not len(new_val):\n",
     "        return\n",
-    "    logging.getLogger(\"tree-update\").warning(\"Key : [%s]\", new_val[0].cell_type)\n",
+    "    logging.getLogger(\"tree-update\").warning(\"Key : [%s]\", new_val[0].node_key)\n",
     "    node_key = new_val[0].node_key\n",
     "    if node_key in loc_views:\n",
     "        logging.getLogger(\"tree-update\").warning(\"Key in Panel \")\n",
     "        rview = loc_views[node_key]\n",
+    "        rview.update(new_val[0])\n",
     "        d2m_full_panel.bottom_right = rview.panel\n",
     "d2m_tree.observe(d2m_tree_update, names='selected_nodes')\n",
     "d2m_full_panel"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "id": "a22ae5bf-51c5-4588-b5a3-bf3bc4d6f566",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9ed896384fea460e97fb1518faf72653",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "TwoByTwoLayout(children=(Tree(layout=Layout(grid_area='top-left', width='40%'), multiple_selection=False, node…"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn_views = {}\n",
+    "for qx, dctx in config_template.get_template().items():\n",
+    "    # print(\"Initializing Panels for \", qx)\n",
+    "    conn_views[qx] = v1l4_view.QXTemplateView(dctx)\n",
+    "d2m_conn_tree = v1l4_view.d2m_map_connect_tree(d2m_map)\n",
+    "d2m_conn_tree.layout.width = '40%' \n",
+    "d2m_conn_full_panel = ipywidgets.TwoByTwoLayout(top_left=d2m_conn_tree, bottom_right=None)\n",
+    "#\n",
+    "def d2m_conn_tree_update(change):\n",
+    "    new_val = change[\"new\"]\n",
+    "    if not len(new_val):\n",
+    "        return\n",
+    "    logging.getLogger(\"tree-update\").warning(\"Key : [%s]\", new_val[0].node_key)\n",
+    "    node_key = new_val[0].node_key\n",
+    "    if node_key in conn_views:\n",
+    "        logging.getLogger(\"tree-update\").warning(\"Key in Panel \")\n",
+    "        rview = conn_views[node_key]\n",
+    "        #rview.update(new_val[0])\n",
+    "        d2m_full_panel.bottom_right = rview.panel\n",
+    "d2m_conn_tree.observe(d2m_conn_tree_update, names='selected_nodes')\n",
+    "d2m_conn_full_panel"
    ]
   },
   {
