added tree views based on trait types

--- a/tests/V1L4-Notebook.ipynb
+++ b/tests/V1L4-Notebook.ipynb
@@ -23,162 +23,146 @@
     "import traitlets\n",
     "import ipywidgets\n",
     "import ipytree\n",
-    "import logging"
+    "import logging\n",
+    "#\n",
+    "import airavata_cerebrum.util.desc_config as cbm_dcfg\n",
+    "import airavata_cerebrum.view.tree as cbm_tree\n",
+    "import airavata_cerebrum.model.mousev1 as mousev1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "315ec88a-cb99-4347-b561-b907fd6f8501",
+   "metadata": {},
+   "source": [
+    "## Configure the Model Description and Templates\n",
+    "\n",
+    "### TODO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "0bf7073c-ede2-44ca-8195-7cb2cc7b053c",
+   "execution_count": null,
+   "id": "dfb6d1ae-45ff-4bcb-a507-2cae872d17b2",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import v1l4\n",
-    "import v1l4_view\n",
-    "model_dex = v1l4.v1l4_model_desc(config_files={\"config\": \"config.json\", \"templates\": \"config_template.json\"})\n",
-    "config_template =  v1l4_view.get_model_template()"
+    "md_config = cbm_dcfg.ModelDescConfig(\n",
+    "    name=\"v1l4\",\n",
+    "    base_dir=\"./\",\n",
+    "    config_files={\"config\": [\"config.json\"]},\n",
+    "    config_dir=\"./v1l4/description/\",\n",
+    ")\n",
+    "print(\"Checking if mandatory configuration keys exist : \", md_config.valid())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
-   "id": "e880260b-0462-4c95-99ba-cf5260e1d125",
+   "execution_count": null,
+   "id": "daa6f0cf-3a01-4b52-a7e1-426318a1e3a0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "390d4e449c484758b04a4467b9771d51",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "TwoByTwoLayout(children=(Tree(layout=Layout(grid_area='top-left', width='40%'), multiple_selection=False, node…"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "import v1l4_view\n",
-    "#\n",
-    "dsrc_views = {}\n",
-    "for qx, dctx in config_template.get_template().items():\n",
-    "    # print(\"Initializing Panels for \", qx)\n",
-    "    dsrc_views[qx] = v1l4_view.QXTemplateView(dctx)\n",
-    "dbxc = model_dex.config.get_config(\"source_data\")\n",
-    "tree = v1l4_view.source_data_tree(dbxc)\n",
-    "tree.layout.width = '40%' \n",
-    "full_panel = ipywidgets.TwoByTwoLayout(top_left=tree, bottom_right=None)\n",
-    "#\n",
-    "def tree_update(change):\n",
-    "    new_val = change[\"new\"]\n",
-    "    if not len(new_val):\n",
-    "        return\n",
-    "    logging.getLogger(\"tree-update\").warning(\"Key : \" + new_val[0].node_key)\n",
-    "    node_key = new_val[0].node_key\n",
-    "    if node_key in dsrc_views:\n",
-    "        logging.getLogger(\"tree-update\").warning(\"Key in Panel \")\n",
-    "        rview = dsrc_views[node_key]\n",
-    "        rview.update(new_val[0])\n",
-    "        full_panel.bottom_right = rview.panel\n",
-    "tree.observe(tree_update, names='selected_nodes')\n",
-    "full_panel"
+    "mdtp_config = ModelDescConfigTemplate(\n",
+    "    config_files={\"templates\": [\"config_template.json\"]},\n",
+    "    config_dir=\"./v1l4/description/\",\n",
+    ")\n",
+    "print(\"Config loaded with \", len(mdtp_config.get_templates()), \" templates\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "05b81dd0-a5d6-4b58-9972-f8df5605b3d7",
+   "metadata": {},
+   "source": [
+    "## View for Source Data \n",
+    "\n",
+    "### TODO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "id": "60d3edbe-1602-4742-b308-05b669d4bb34",
+   "execution_count": null,
+   "id": "b388cce9-f220-4006-b761-5104ff59c7f7",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e4beee8ff2334ea99ab8e9e7e22990ff",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "TwoByTwoLayout(children=(Tree(layout=Layout(grid_area='top-left', width='40%'), multiple_selection=False, node…"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "d2m_map = model_dex.config.get_config(\"data2model_map\")\n",
-    "loc_views = {}\n",
-    "for qx, dctx in config_template.get_template().items():\n",
-    "    # print(\"Initializing Panels for \", qx)\n",
-    "    loc_views[qx] = v1l4_view.QXTemplateView(dctx)\n",
-    "d2m_tree = v1l4_view.d2m_map_loc_tree(d2m_map)\n",
-    "d2m_tree.layout.width = '40%' \n",
-    "d2m_full_panel = ipywidgets.TwoByTwoLayout(top_left=d2m_tree, bottom_right=None)\n",
-    "#\n",
-    "def d2m_tree_update(change):\n",
-    "    new_val = change[\"new\"]\n",
-    "    if not len(new_val):\n",
-    "        return\n",
-    "    logging.getLogger(\"tree-update\").warning(\"Key : [%s]\", new_val[0].node_key)\n",
-    "    node_key = new_val[0].node_key\n",
-    "    if node_key in loc_views:\n",
-    "        logging.getLogger(\"tree-update\").warning(\"Key in Panel \")\n",
-    "        rview = loc_views[node_key]\n",
-    "        rview.update(new_val[0])\n",
-    "        d2m_full_panel.bottom_right = rview.panel\n",
-    "d2m_tree.observe(d2m_tree_update, names='selected_nodes')\n",
-    "d2m_full_panel"
+    "src_tree = cbm_tree.SourceDataTreeView(md_config, mdtp_config)\n",
+    "src_tree.build()\n",
+    "src_tree.layout"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "773d5250-e153-46b0-80a6-7dbcef67c599",
+   "metadata": {},
+   "source": [
+    "## View for Locations\n",
+    "\n",
+    "### TODO"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "a22ae5bf-51c5-4588-b5a3-bf3bc4d6f566",
+   "execution_count": null,
+   "id": "7a1d3e86-5274-4aff-ab18-ff8b3809c09b",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f44ca2416ddf4075bd025c35d934454b",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "TwoByTwoLayout(children=(Tree(layout=Layout(grid_area='top-left', width='40%'), multiple_selection=False, node…"
-      ]
-     },
-     "execution_count": 9,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "conn_views = {}\n",
-    "for qx, dctx in config_template.get_template().items():\n",
-    "    # print(\"Initializing Panels for \", qx)\n",
-    "    conn_views[qx] = v1l4_view.QXTemplateView(dctx)\n",
-    "d2m_conn_tree = v1l4_view.d2m_map_connect_tree(d2m_map)\n",
-    "d2m_conn_tree.layout.width = '40%' \n",
-    "d2m_conn_full_panel = ipywidgets.TwoByTwoLayout(top_left=d2m_conn_tree, bottom_right=None)\n",
-    "#\n",
-    "def d2m_conn_tree_update(change):\n",
-    "    new_val = change[\"new\"]\n",
-    "    if not len(new_val):\n",
-    "        return\n",
-    "    logging.getLogger(\"tree-update\").warning(\"Key : [%s]\", new_val[0].node_key)\n",
-    "    node_key = new_val[0].node_key\n",
-    "    if node_key in conn_views:\n",
-    "        logging.getLogger(\"tree-update\").warning(\"Key in Panel \")\n",
-    "        rview = conn_views[node_key]\n",
-    "        #rview.update(new_val[0])\n",
-    "        d2m_full_panel.bottom_right = rview.panel\n",
-    "d2m_conn_tree.observe(d2m_conn_tree_update, names='selected_nodes')\n",
-    "d2m_conn_full_panel"
+    "loc_tree = cbm_tree.D2MLocationsTreeView(md_config, mdtp_config)\n",
+    "loc_tree.build()\n",
+    "loc_tree.layout"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "01fcaab8-df10-4e18-8a52-e9086ecf445a",
+   "metadata": {},
+   "source": [
+    "## View for Connections\n",
+    "\n",
+    "### TODO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14045bdf-4d6c-41d0-ae2f-b0cee656235e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "conn_tree = cbm_tree.D2MConnectionsTreeView(md_config, mdtp_config)\n",
+    "conn_tree.build()\n",
+    "conn_tree.layout"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "002a0d46-9eb4-474d-bee6-bc194320b3fc",
+   "metadata": {},
+   "source": [
+    "## Model Description\n",
+    "\n",
+    "### TODO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "918d8f9a-4230-48bf-8c1c-340aa0d3afab",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_custom_mod = \"./v1l4/description/custom_mod.json\"\n",
+    "model_dex = ModelDescription(\n",
+    "    md_config,\n",
+    "    mousev1.V1RegionMapper,                                                                                                                                                                                                         \n",
+    "    mousev1.V1NeuronMapper,                                                                                                                                                                                                         \n",
+    "    mousev1.V1ConnectionMapper,                                                                                                                                                                                                     \n",
+    "    mousev1.V1BMTKNetworkBuilder,                                                                                                                                                                                                   \n",
+    "    model_custom_mod,                                                                                                                                                                                                               \n",
+    "    save_output,\n",
+    ")                                                                                                                                                                                                                                   \n"
    ]
   },
   {
