--- a/tests/V1L4-View.ipynb
+++ b/tests/V1L4-View.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "id": "cc1e02e6-1cd2-41df-973c-54d8b8b7305d",
    "metadata": {},
    "outputs": [],
@@ -28,35 +28,205 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": null,
+   "id": "a5530b74-5695-4fde-ad3b-429cc7a1313e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import airavata_cerebrum.util.desc_config as cbm_dcfg\n",
+    "import airavata_cerebrum.view.tree as cbm_tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
    "id": "013e88c2-14a4-4f42-a1f1-8ad1cf1f2168",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Checking if mandatory config keys exists :  True\n",
+      "Config loaded with  11  templates\n"
+     ]
+    }
+   ],
+   "source": [
+    "md_config = cbm_dcfg.ModelDescConfig(\n",
+    "    name=\"v1l4\",\n",
+    "    base_dir=\"./\",\n",
+    "    config_files={\"config\": [\"config.json\"]},\n",
+    "    config_dir=\"./v1l4/description/\",\n",
+    ")\n",
+    "print(\"Checking if mandatory config keys exists : \", md_config.valid())\n",
+    "\n",
+    "mdtp_config = cbm_dcfg.ModelDescConfigTemplate(\n",
+    "    config_files={\"templates\": [\"config_template.json\"]},\n",
+    "    config_dir=\"./v1l4/description/\",\n",
+    ")\n",
+    "print(\"Config loaded with \", len(mdtp_config.get_templates()), \" templates\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "13c9534d-2cee-430f-999c-582de96a8ad0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "## S"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "67449867-e7f0-4c4a-8084-43a844bd50e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c15d492d74654fa98e9066c51808f57c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "TwoByTwoLayout(children=(Tree(layout=Layout(grid_area='top-left', width='40%'), multiple_selection=False, node…"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "src_tree = cbm_tree.SourceDataTreeView(md_config, mdtp_config)\n",
+    "src_tree.build()\n",
+    "src_tree.layout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "5324a969-6abb-4bdd-a1dd-f5f28dc7d599",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "74bcbfce602b40d4abc7fc3c70d3a064",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "TwoByTwoLayout(children=(Tree(layout=Layout(grid_area='top-left', width='40%'), multiple_selection=False, node…"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loc_tree = cbm_tree.D2MLocationsTreeView(md_config, mdtp_config)\n",
+    "loc_tree.build()\n",
+    "loc_tree.layout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "id": "5e805238-96e5-4832-97b2-60b9e930bd23",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "12bfee85a1424f67b8ec6149130047b7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "TwoByTwoLayout(children=(Tree(layout=Layout(grid_area='top-left', width='40%'), multiple_selection=False, node…"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "conn_tree = cbm_tree.D2MConnectionsTreeView(md_config, mdtp_config)\n",
+    "conn_tree.build()\n",
+    "conn_tree.layout"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "26e095d4-a8b7-4f33-81cb-d2c3fc08848f",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:airavata_cerebrum.atlas.log.logging:Processing xformers for db airavata_cerebrum.atlas.data.abm_celltypes\n",
-      "INFO:airavata_cerebrum.atlas.log.logging:Running XFormer : airavata_cerebrum.atlas.data.abm_celltypes.CTModelNameFilter\n",
-      "INFO:airavata_cerebrum.atlas.log.logging:Completed XForm : airavata_cerebrum.atlas.data.abm_celltypes.CTModelNameFilter\n",
-      "INFO:airavata_cerebrum.atlas.log.logging:Running XFormer : airavata_cerebrum.atlas.data.abm_celltypes.CTExplainedRatioFilter\n",
-      "INFO:airavata_cerebrum.atlas.log.logging:Completed XForm : airavata_cerebrum.atlas.data.abm_celltypes.CTExplainedRatioFilter\n",
-      "INFO:airavata_cerebrum.atlas.log.logging:Completed processing xformers for db airavata_cerebrum.atlas.data.abm_celltypes\n",
-      "INFO:airavata_cerebrum.atlas.log.logging:Processing xformers for db airavata_cerebrum.atlas.data.abc_mouse\n",
-      "INFO:airavata_cerebrum.atlas.log.logging:Running XFormer : airavata_cerebrum.atlas.data.abc_mouse.ABCDbMERFISH_CCFLayerRegionFilter\n",
-      "INFO:airavata_cerebrum.atlas.log.logging:Completed XForm : airavata_cerebrum.atlas.data.abc_mouse.ABCDbMERFISH_CCFLayerRegionFilter\n",
-      "INFO:airavata_cerebrum.atlas.log.logging:Completed processing xformers for db airavata_cerebrum.atlas.data.abc_mouse\n"
+      "/home/srirampc/anaconda3/envs/cerebrum/lib/python3.10/site-packages/neuroanalysis/util/jit.py:25: UserWarning: Could not import numba; falling back to slower implementation.\n",
+      "  warnings.warn(\"Could not import numba; falling back to slower implementation.\")\n"
      ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6a3dad934ae04cf1a43c50d66639673e",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "TwoByTwoLayout(children=(Tree(layout=Layout(grid_area='top-left', width='40%'), multiple_selection=False, node…"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "import v1l4\n",
-    "model_dex = v1l4.v1l4_model_desc(config_files={\"config\": \"config_template.json\", \"config_template\": \"config_template.json\"})\n",
-    "model_dex.model_config.get_config(\"db_xform\")['airavata_cerebrum.atlas.data.abm_celltypes']['workflow']\n",
-    "xdb_output = model_dex.xform_db_data()\n",
-    "model_dex2 = v1l4.v1l4_model_desc(config_files={\"config\": \"config.json\", \"config_template\": \"config_template.json\"})\n",
-    "model_dex2.model_config.get_config(\"db_xform\")['airavata_cerebrum.atlas.data.abm_celltypes']['workflow']\n",
-    "xdb_output2 = model_dex2.xform_db_data()"
+    "import v1l4_view\n",
+    "#\n",
+    "dsrc_views = {}\n",
+    "for qx, dctx in mdtp_config.get_templates().items():\n",
+    "    # print(\"Initializing Panels for \", qx)\n",
+    "    dsrc_views[qx] = v1l4_view.QXTemplateView(dctx)\n",
+    "dbxc = md_config.get_config(\"source_data\")\n",
+    "tree = v1l4_view.source_data_tree(dbxc)\n",
+    "tree.layout.width = '40%' \n",
+    "full_panel = ipywidgets.TwoByTwoLayout(top_left=tree, bottom_right=None)\n",
+    "\n",
+    "full_panel\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8d7d5a7d-f369-45e1-98d9-b7515067b695",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#\n",
+    "def tree_update(change):\n",
+    "    new_val = change[\"new\"]\n",
+    "    if not len(new_val):\n",
+    "        return\n",
+    "    logging.getLogger(\"tree-update\").warning(\"Key : \" + new_val[0].node_key)\n",
+    "    node_key = new_val[0].node_key\n",
+    "    if node_key in dsrc_views:\n",
+    "        logging.getLogger(\"tree-update\").warning(\"Key in Panel \")\n",
+    "        rview = dsrc_views[node_key]\n",
+    "        rview.update(new_val[0])\n",
+    "        full_panel.bottom_right = rview.panel\n",
+    "tree.observe(tree_update, names='selected_nodes')"
    ]
   },
   {
@@ -84,7 +254,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "model_dex = v1l4.v1l4_model_desc(config_files={\"config\": \"config.json\", \"templates\": \"config_template.json\"})"
+   ]
   },
   {
    "cell_type": "code",
