added tree views of network structure

--- a/resources/notebooks/V1L4-Notebook.ipynb
+++ b/resources/notebooks/V1L4-Notebook.ipynb
@@ -21,7 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[atl1-1-01-016-30-1.pace.gatech.edu:mpi_rank_0][MPID_Init] [Performance Suggestion]: Application has requested for multi-thread capability. If allocating memory from different pthreads/OpenMP threads, please consider setting MV2_USE_ALIGNED_ALLOC=1 for improved performance.\n",
+      "[atl1-1-01-013-38-2.pace.gatech.edu:mpi_rank_0][MPID_Init] [Performance Suggestion]: Application has requested for multi-thread capability. If allocating memory from different pthreads/OpenMP threads, please consider setting MV2_USE_ALIGNED_ALLOC=1 for improved performance.\n",
       "Use MV2_USE_THREAD_WARNING=0 to suppress this error message.\n"
      ]
     }
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "dfb6d1ae-45ff-4bcb-a507-2cae872d17b2",
    "metadata": {},
    "outputs": [
@@ -64,7 +64,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "11  templates are loaded\n"
+      "12  templates are loaded\n"
      ]
     }
    ],
@@ -95,28 +95,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "id": "b388cce9-f220-4006-b761-5104ff59c7f7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "167fac0c63874645bc093314d7d4075b",
+       "model_id": "3b158312f0604cf68a446d373ca290bb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "TwoByTwoLayout(children=(Tree(layout=Layout(grid_area='top-left', width='40%'), multiple_selection=False, node…"
+       "TwoByTwoLayout(children=(Tree(layout=Layout(grid_area='top-left', width='55%'), multiple_selection=False, node…"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "src_tree = cbm_tree.SourceDataTreeView(md_config, mdtp_config)\n",
+    "src_tree = cbm_tree.SourceDataTreeView(md_config, mdtp_config, left_width=\"55%\")\n",
     "src_tree.build()\n",
     "src_tree.layout"
    ]
@@ -139,14 +139,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "7a1d3e86-5274-4aff-ab18-ff8b3809c09b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8950a02f97054451b19e9a2359a2067a",
+       "model_id": "d6208df02f9d4ffd99e9869177a053af",
        "version_major": 2,
        "version_minor": 0
       },
@@ -154,13 +154,13 @@
        "TwoByTwoLayout(children=(Tree(layout=Layout(grid_area='top-left', width='40%'), multiple_selection=False, node…"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "loc_tree = cbm_tree.D2MLocationsTreeView(md_config, mdtp_config)\n",
+    "loc_tree = cbm_tree.D2MLocationsTreeView(md_config, mdtp_config, width=\"55%\")\n",
     "loc_tree.build()\n",
     "loc_tree.layout"
    ]
@@ -177,14 +177,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "14045bdf-4d6c-41d0-ae2f-b0cee656235e",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a4ab4ec091c14e42be4168f229dab05b",
+       "model_id": "1269faae0bdf43349e756f93528878ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -192,7 +192,7 @@
        "TwoByTwoLayout(children=(Tree(layout=Layout(grid_area='top-left', width='40%'), multiple_selection=False, node…"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 18,
    "id": "918d8f9a-4230-48bf-8c1c-340aa0d3afab",
    "metadata": {},
    "outputs": [],
@@ -244,6 +244,43 @@
     "    save_flag=True,\n",
     ")                                                                                                                                                                                                                                   \n",
     "logging.basicConfig(level=logging.INFO)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "284af9b6-404d-450f-8db7-407966ae3f64",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "INFO:airavata_cerebrum.view.tree:Start Left-side panel construction for [v1]\n",
+      "INFO:airavata_cerebrum.view.tree:Completed Left-side panel construction\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "9914210267a14b31acb2abe2b23293ee",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "TwoByTwoLayout(children=(Tree(layout=Layout(grid_area='top-left', width='55%'), multiple_selection=False, node…"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "custom_mods = model_dex.custom_mod_struct()\n",
+    "cmod_view = cbm_tree.NetworkTreeView(custom_mods, left_width=\"55%\")\n",
+    "cmod_view.build()\n",
+    "cmod_view.layout"
    ]
   },
   {
