--- a/resources/notebooks/V1L4-Notebook.ipynb
+++ b/resources/notebooks/V1L4-Notebook.ipynb
@@ -21,7 +21,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[atl1-1-01-013-38-2.pace.gatech.edu:mpi_rank_0][MPID_Init] [Performance Suggestion]: Application has requested for multi-thread capability. If allocating memory from different pthreads/OpenMP threads, please consider setting MV2_USE_ALIGNED_ALLOC=1 for improved performance.\n",
+      "[atl1-1-01-013-32-2.pace.gatech.edu:mpi_rank_0][MPID_Init] [Performance Suggestion]: Application has requested for multi-thread capability. If allocating memory from different pthreads/OpenMP threads, please consider setting MV2_USE_ALIGNED_ALLOC=1 for improved performance.\n",
       "Use MV2_USE_THREAD_WARNING=0 to suppress this error message.\n"
      ]
     }
@@ -32,7 +32,7 @@
     "import airavata_cerebrum.util.desc_config as cbm_dcfg\n",
     "import airavata_cerebrum.view.tree as cbm_tree\n",
     "import airavata_cerebrum.model.desc as cbm_desc\n",
-    "import airavata_cerebrum.model.mousev1 as mousev1"
+    "import mousev1.model as mousev1"
    ]
   },
   {
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "id": "dfb6d1ae-45ff-4bcb-a507-2cae872d17b2",
    "metadata": {},
    "outputs": [
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "918d8f9a-4230-48bf-8c1c-340aa0d3afab",
    "metadata": {},
    "outputs": [],
@@ -248,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "284af9b6-404d-450f-8db7-407966ae3f64",
    "metadata": {},
    "outputs": [
@@ -263,7 +263,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9914210267a14b31acb2abe2b23293ee",
+       "model_id": "f90c261317e447028501709d0a712a47",
        "version_major": 2,
        "version_minor": 0
       },
@@ -271,7 +271,7 @@
        "TwoByTwoLayout(children=(Tree(layout=Layout(grid_area='top-left', width='55%'), multiple_selection=False, node…"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
