--- a/resources/notebooks/merfish2model.ipynb
+++ b/resources/notebooks/merfish2model.ipynb
@@ -10,7 +10,7 @@
     "import sys\n",
     "import os\n",
     "# Import abc_mouse\n",
-    "import airavata_cerebrum.atlas.data.abc_mouse as abc_mouse\n",
+    "import airavata_cerebrum.dataset.abc_mouse as abc_mouse\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt"
@@ -1473,7 +1473,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.19"
+   "version": "3.10.14"
   }
  },
  "nbformat": 4,
